import Foundation

public enum AccessibilityIdentifier {
    static let dismissButton = "dismissButton"
    static let tabBar = "tabBar"
    static let map = "map"
    static let books = "books"
    static let exploreButton = "explore"
}
